DSND-2278: Improve log messages and levels
* Removed apiClient catch for IllegalArgumentException as not valid
  for new ECS services.